--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          <div>LA GIOCONDA</div>
       </div>
       <div class ="item">
-      	 <img src = "images/imgList3.png">
+      	 <img src = "images/imgList3.PNG">
          <div>TAINAN</div>
       </div>
       <div class ="item"></div>
@@ -47,7 +47,7 @@
      </a>
      </div>
      <div class = "projectBox">
-        <img src = "images/projectImg.png">
+        <img src = "images/projectImg.PNG">
      </div>
      <div class = "infoBox">
       <progress value="8" max="10"></progress>
