--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel =stylesheet type = "text/css" href="pageStyle.css">
+	<link rel = "stylesheet" type = "text/css" href="pageStyle.css">
 </head>
 <body>
   <header>
